wellesleynet/roles/k8s/files/keepass.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keepass
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keepass
  serviceName: "keepass"
  template:
    metadata:
      labels:
        app: keepass
    spec:
      containers:
      - image: httpd:2.4.46-alpine
        imagePullPolicy: Always
        name: keepass
        ports:
        - containerPort: 80
        volumeMounts:
        - name: keepass-data
          mountPath: /usr/local/apache2/htdocs
        - name: keepass-conf
          mountPath: /usr/local/apache2/conf
      volumes:
      - name: keepass-data
        persistentVolumeClaim:
          claimName: keepass
      - name: keepass-conf
        projected:
          sources:
          - secret:
              name: keepass
          - configMap:
              name: keepass

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: keepass
spec:
  selector:
    app: keepass
  ports:
  - name: keepass
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keepass
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: keepass.kiski.co
    http:
      paths:
      - backend:
          serviceName: keepass
          servicePort: 80
  tls:
  - hosts:
    - keepass.kiski.co
    secretName: kiskico-wildcard
